tests/baselines/reference/FunctionDeclaration2_es6(strict=true).errors.txt
FunctionDeclaration2_es6.ts(1,12): error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.
FunctionDeclaration2_es6.ts(1,12): error TS7006: Parameter 'yield' implicitly has an 'any' type.


==== FunctionDeclaration2_es6.ts (2 errors) ====
    function f(yield) {
               ~~~~~
!!! error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.
               ~~~~~
!!! error TS7006: Parameter 'yield' implicitly has an 'any' type.
    }